--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     <script>
         const projects = [
-            { name: "California Crime Analysis", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Tableau"] },
+            { name: "California Crime Analysis", img: "https://as2.ftcdn.net/v2/jpg/03/93/71/07/1000_F_393710726_UUsOQUS2NRC3HUYukdS12WoSYiQvANEV.jpg", link: "#", skills: ["Python", "Tableau"] },
             { name: "Stock Market Analysis", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
             { name: "Sentiment Analysis", img: "https://via.placeholder.com/400", link: "#", skills: ["NLP", "Deep Learning"] },
             { name: "Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["Machine Learning", "SQL"] }
