--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </section>
     
-    <footer class="bg-gray-800 text-white text-center py-4 mt-6">
+    <footer class="bg-blue-600 text-white text-center py-4 mt-6">
         <h2 class="text-lg font-semibold" data-en>Connect with Me</h2>
         <h2 class="text-lg font-semibold" data-zh style="display:none;">联系我</h2>
         <div class="flex justify-center space-x-4 mt-2">
