--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             flex-shrink: 0;
             display: flex;
             justify-content: center; /* Centers content horizontally */
-            align-items: center; /* Centers content vertically */
+            align-items: flex-start; /* Aligns posts to the top */
+            height: 100%; /* Ensure all posts have the same height */
             transform: scale(0.7); /* Shrink the size slightly (85% of original) */
             transition: transform 0.3s ease-in-out;
         }
