--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         </div>
     </section>
 
+    <section class="max-w-4xl mx-auto p-6">
+        <h2 class="text-2xl font-semibold mb-4" data-en>Recent Posts</h2>
+        <h2 class="text-2xl font-semibold mb-4" data-zh style="display:none;">最新帖子</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6" id="posts">
+        </div>
+    </section>
+
     <!-- Place <div> tag where you want the feed to appear -->
     <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
     
