--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     </header>
     
     <section class="max-w-4xl mx-auto p-6">
-        <h2 class="text-2xl font-semibold mb-4" data-en>Search by Skill</h2>
-        <h2 class="text-2xl font-semibold mb-4" data-zh style="display:none;">按技能搜索</h2>
-        <input type="text" id="skill-search" onkeyup="filterProjects()" placeholder="Search projects by skill..." class="w-full mt-6 p-2 border rounded">
+        <h2 class="text-2xl font-semibold mt-6 mb-4" data-en>Search by Skill</h2>
+        <h2 class="text-2xl font-semibold mt-6 mb-4" data-zh style="display:none;">按技能搜索</h2>
+        <input type="text" id="skill-search" onkeyup="filterProjects()" placeholder="Search projects by skill..." class="w-full p-2 border rounded">
     </section>
     
     <section class="max-w-4xl mx-auto p-6">
