--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <h2 class="text-lg font-semibold" data-en>Connect with Me</h2>
         <h2 class="text-lg font-semibold" data-zh style="display:none;">联系我</h2>
         <div class="flex justify-center space-x-4 mt-2">
-            <a href="https://www.linkedin.com/in/rob-martin-62a942249/" class="text-blue-200 hover:underline">LinkedIn</a>
-            <a href="https://github.com/RobM-data" class="text-blue-200 hover:underline">GitHub</a>
+            <a href="https://www.linkedin.com/in/rob-martin-62a942249/" target="_blank" class="text-blue-200 hover:underline">LinkedIn</a>
+            <a href="https://github.com/RobM-data" target="_blank" class="text-blue-200 hover:underline">GitHub</a>
             <a href="#" class="text-blue-200 hover:underline">Twitter</a>
         </div>
     </footer>
