--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             color: white;
             transition: 0.3s ease;
             padding-top: 20px;
+            z-index: 9999;
         }
         
         .sidebar.active {
