--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
             <li class="dropdown">
                 <a href="#" onclick="toggleDropdown(event)">Projects ▾</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">    Data Science</a></li>
-                    <li><a href="#">    Web Development</a></li>
-                    <li><a href="#">    Machine Learning</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Data Science</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Web Development</a></li>
+                    <li><a href="#">&nbsp;&nbsp;&nbsp;&nbsp;Machine Learning</a></li>
                 </ul>
             </li>
             <li><a href="#">Contact</a></li>
