--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         
         /* Close Button */
         .close-btn {
-            background: red;
+            background: none;
             color: white;
             border: none;
             padding: 10px;
             font-size: 18px;
             cursor: pointer;
             width: 100%;
-            text-align: right;
+            text-align: left;
         }
         
         /* Center Title */
