--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     
     <script>
         const projects = [
-            { name: "California Crime Analysis", img: "https://via.placeholder.com/400", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
-            { name: "Stock Market Analysis", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
-            { name: "Sentiment Analysis", img: "https://via.placeholder.com/400", link: "#", skills: ["NLP", "Deep Learning"] },
+            { name: "Crime in California", img: "https://via.placeholder.com/400", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
+            { name: "Causes of Suicide", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
+            { name: "Insurance Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["NLP", "Deep Learning"] },
             { name: "Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["Machine Learning", "SQL"] }
         ];
         
