--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
     <script>
         const projects = [
             { name: "Crime in California", img: "https://via.placeholder.com/400", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
-            { name: "Causes of Suicide", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
+            { name: "Restaurant Recommender", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
             { name: "Insurance Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["NLP", "Deep Learning"] },
-            { name: "Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["Machine Learning", "SQL"] }
+            { name: "Causes of Suicide", img: "https://via.placeholder.com/400", link: "#", skills: ["Machine Learning", "SQL"] }
         ];
         
         const projectContainer = document.getElementById("projects");
