--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
     
     <script>
         const projects = [
-            { name: "Crime in California", img: "https://via.placeholder.com/400", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
-            { name: "Restaurant Recommender", img: "https://via.placeholder.com/400", link: "#", skills: ["Python", "Machine Learning"] },
-            { name: "Insurance Fraud Detection", img: "https://via.placeholder.com/400", link: "#", skills: ["NLP", "Deep Learning"] },
-            { name: "Causes of Suicide", img: "https://via.placeholder.com/400", link: "#", skills: ["Machine Learning", "SQL"] }
+            { name: "Crime in California", img: "https://robm-data.github.io/portfolio/Placeholder1.png", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
+            { name: "Restaurant Recommender", img: "https://robm-data.github.io/portfolio/Placeholder2.png", link: "#", skills: ["Python", "Machine Learning"] },
+            { name: "Insurance Fraud Detection", img: "https://robm-data.github.io/portfolio/Placeholder3.png", link: "#", skills: ["NLP", "Deep Learning"] },
+            { name: "Causes of Suicide", img: "https://robm-data.github.io/portfolio/Placeholder4.png", link: "#", skills: ["Machine Learning", "SQL"] }
         ];
         
         const projectContainer = document.getElementById("projects");
