--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
         
             // Toggle button color based on sidebar state
             if (sidebar.classList.contains("active")) {
-                menuButton.style.background = "white";
-                menuButton.style.color = "black";
-            } else {
-                menuButton.style.background = "black";
+                menuButton.style.background = "none";
                 menuButton.style.color = "white";
+            } else {
+                menuButton.style.background = "none";
+                menuButton.style.color = "black";
             }
         }
                 
