--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             color: white;
             transition: left 0.3s ease-in-out;
             z-index: 9999;
-            padding-top: 60px;
+            padding-top: 80px;
+            padding-left: 10px;
         }
         
         /* Sidebar Open */
