--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
             <li class="dropdown">
                 <a href="#" onclick="toggleDropdown(event)">Projects ▾</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Data Science</a></li>
-                    <li><a href="#">Web Development</a></li>
-                    <li><a href="#">Machine Learning</a></li>
+                    <li><a href="#">Crime in California</a></li>
+                    <li><a href="#">Restaurant Recommender</a></li>
+                    <li><a href="#">Insurance Fraud Detection</a></li>
+                    <li><a href="#">Causes of Suicide</a></li>
                 </ul>
             </li>
             <li><a href="#">Contact</a></li>
