--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
             padding-left: 20px; /* Indent sub-links */
         }
 
+        /* Style sub-links with a white horizontal line */
+        .dropdown-menu li {
+            padding: 10px 0;
+            border-bottom: 1px solid white; /* White line between sub-links */
+        }
+        
+        /* Remove the bottom border for the last sub-link */
+        .dropdown-menu li:last-child {
+            border-bottom: none;
+        }
+
     </style>
 
     
