--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
             padding-left: 20px; /* Indent sub-links */
         }
 
-        /* Style sub-links with a white horizontal line */
+        /* Style sub-links with a shorter white line */
         .dropdown-menu li {
-            padding: 10px 0;
-            border-bottom: 1px solid white; /* White line between sub-links */
+            padding: 5px 0; /* Reduce gap between text and line */
+            border-bottom: 1px solid white; /* White line */
+            width: 90%; /* Make the line shorter than the full sidebar width */
+            margin: 0 auto; /* Center the line */
         }
         
         /* Remove the bottom border for the last sub-link */
