--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
         .dropdown-menu li {
             padding: 4px 0; /* Reduce gap between text and line */
             border-bottom: 1px solid white; /* White line */
-            width: 70%; /* Make the line shorter than the full sidebar width */
+            width: 60%; /* Make the line shorter than the full sidebar width */
             margin: 0 auto; /* Center the line */
+            line-height: 1.4;
         }
         
         /* Remove the bottom border for the last sub-link */
