--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             border-bottom: 1px solid white; /* White line */
             width: 65%; /* Make the line shorter than the full sidebar width */
             margin: 0 auto; /* Center the line */
-            line-height: 1.4;
+            display: flex;
+            align-items: center;
+            line-height: 1.5;
         }
         
         /* Remove the bottom border for the last sub-link */
