--- a/index.html
+++ b/index.html
@@ -117,10 +117,14 @@
             <li class="dropdown">
                 <a href="#" onclick="toggleDropdown(event)">Projects ▾</a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Crime in California</a></li>
-                    <li><a href="#">Restaurant Recommender</a></li>
-                    <li><a href="#">Insurance Fraud Detection</a></li>
-                    <li><a href="#">Causes of Suicide</a></li>
+                    <li data-en><a href="#">Crime in California</a></li>
+                    <li data-zh style="display:none;"><a href="#">加利福尼亚州犯罪</a></li>
+                    <li data-en><a href="#">Restaurant Recommender</a></li>
+                    <li data-zh style="display:none;"><a href="#">餐厅推荐系统</a></li>
+                    <li data-en><a href="#">Insurance Fraud Detection</a></li>
+                    <li data-zh style="display:none;"><a href="#">保险欺诈检测</a></li>
+                    <li data-en><a href="#">Causes of Suicide</a></li>
+                    <li data-zh style="display:none;"><a href="#">自杀原因分析</a></li>
                 </ul>
             </li>
             <li><a href="#">Contact</a></li>
@@ -134,7 +138,7 @@
         <h2 class="text-2xl font-semibold mt-6 mb-4" data-en>Search by Skill</h2>
         <h2 class="text-2xl font-semibold mt-6 mb-4" data-zh style="display:none;">按技能搜索</h2>
         <input type="text" id="skill-search" onkeyup="filterProjects()" placeholder="Search projects by skill..." class="w-full p-2 border rounded" data-en>
-        <input type="text" id="skill-search" onkeyup="filterProjects()" placeholder="按技能搜索项目..." class="w-full p-2 border rounded" data-zh style="display:none;">
+        <input type="text" id="skill-search" onkeyup="filterProjects()" placeholder="按技能搜索项目. . ." class="w-full p-2 border rounded" data-zh style="display:none;">
     </section>
     
     <section class="max-w-4xl mx-auto p-6">
