--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 
         function toggleDropdown(element) {
             // Find the closest parent <li> with class "dropdown"
-            let parentDropdown = element.closest(".dropdown");
+            let parentDropdown = element.closest(".dropdown-menu");
         
             // Explicitly find the dropdown menu inside that parent
             let submenu = parentDropdown.querySelector(".dropdown-menu");
