--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                 
         function toggleDropdown(event) {
             event.preventDefault();
+            window.alert(currentLanguage);
             let submenu = event.target.nextElementSibling;
             
             // Toggle display property
