--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
             } else {
                 let submenu = event.target.nextElementSibling.nextElementSibling;
             }
+
+            window.alert(submenu);
             
             // Toggle display property
             if (submenu.style.display === "block") {
