--- a/index.html
+++ b/index.html
@@ -252,13 +252,13 @@
             event.preventDefault();
             alert("before if");
             if (currentLanguage === "zh") {
-                let submenu = event.target.nextSibling;
+                submenu = event.target.nextSibling;
             } else {
-                let submenu = event.target.nextSibling.nextSibling;
+                submenu = event.target.nextSibling.nextSibling;
             }
             alert("after if");
 
-            window.alert(submenu);
+            alert(submenu);
             
             // Toggle display property
             if (submenu.style.display === "block") {
