--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div id="sidebar" class="sidebar">
             <ul>
                 <li>
-                    <a href="#" data-en>Home</a>
-                    <a href="#" data-zh style="display:none;">主页</a>
+                    <a href="https://robm-data.github.io/portfolio/#" data-en>Home</a>
+                    <a href="https://robm-data.github.io/portfolio/#" data-zh style="display:none;">主页</a>
                 </li>
                 <li>
                     <a href="#" data-en>About</a>
@@ -140,8 +140,8 @@
                     <a href="#" onclick="toggleDropdown(event)" data-zh style="display:none;">项目 ▾</a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#" data-en>Crime in California</a>
-                            <a href="#" data-zh style="display:none;">加利福尼亚州犯罪</a>
+                            <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-en>Crime in California</a>
+                            <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-zh style="display:none;">加利福尼亚州犯罪</a>
                         </li>
                         <li>
                             <a href="#" data-en>Restaurant Recommender</a>
