--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#" data-en>Contact</a>
-                    <a href="#" data-zh style="display:none;">联系</a>
+                    <a href="https://robm-data.github.io/portfolio/data.html" data-en>Contact</a>
+                    <a href="https://robm-data.github.io/portfolio/data.html" data-zh style="display:none;">联系</a>
                 </li>
             </ul>
         </div>
