--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <div id="sidebar" class="sidebar">
             <ul>
                 <li>
-                    <a href="https://robm-data.github.io/portfolio/#" data-en>Home</a>
-                    <a href="https://robm-data.github.io/portfolio/#" data-zh style="display:none;">主页</a>
+                    <a href="https://robm-data.github.io/portfolio/index.html" data-en>Home</a>
+                    <a href="https://robm-data.github.io/portfolio/index.html" data-zh style="display:none;">主页</a>
                 </li>
                 <li>
                     <a href="#" data-en>About</a>
@@ -140,8 +140,8 @@
                     <a href="#" onclick="toggleDropdown(event)" data-zh style="display:none;">项目 ▾</a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-en>Crime in California</a>
-                            <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-zh style="display:none;">加利福尼亚州犯罪</a>
+                            <a href="https://robm-data.github.io/crime-in-california/main.html" data-en>Crime in California</a>
+                            <a href="https://robm-data.github.io/crime-in-california/main.html" data-zh style="display:none;">加利福尼亚州犯罪</a>
                         </li>
                         <li>
                             <a href="#" data-en>Restaurant Recommender</a>
@@ -203,7 +203,7 @@
     
     <script>
         const projects = [
-            { name_en: "Crime in California", name_zh: "加利福尼亚州犯罪", img: "https://robm-data.github.io/portfolio/Placeholder1.png", link: "https://robm-data.github.io/california-crime-analysis/index.html", skills: ["Python", "Tableau"] },
+            { name_en: "Crime in California", name_zh: "加利福尼亚州犯罪", img: "https://robm-data.github.io/portfolio/Placeholder1.png", link: "https://robm-data.github.io/crime-in-california/main.html", skills: ["Python", "Tableau"] },
             { name_en: "Restaurant Recommender", name_zh: "餐厅推荐系统", img: "https://robm-data.github.io/portfolio/Placeholder2.png", link: "#", skills: ["Python", "Machine Learning"] },
             { name_en: "Insurance Fraud Detection", name_zh: "保险欺诈检测", img: "https://robm-data.github.io/portfolio/Placeholder3.png", link: "#", skills: ["NLP", "Deep Learning"] },
             { name_en: "Causes of Suicide", name_zh: "自杀原因分析", img: "https://robm-data.github.io/portfolio/Placeholder4.png", link: "#", skills: ["Machine Learning", "SQL"] }
