--- a/contact.html
+++ b/contact.html
@@ -114,8 +114,8 @@
     <div id="sidebar" class="sidebar">
         <ul>
             <li>
-                <a href="https://robm-data.github.io/portfolio/#" data-en>Home</a>
-                <a href="https://robm-data.github.io/portfolio/#" data-zh style="display:none;">主页</a>
+                <a href="https://robm-data.github.io/portfolio/index.html" data-en>Home</a>
+                <a href="https://robm-data.github.io/portfolio/index.html" data-zh style="display:none;">主页</a>
             </li>
             <li>
                 <a href="#" data-en>About</a>
@@ -126,8 +126,8 @@
                 <a href="#" onclick="toggleDropdown(event)" data-zh style="display:none;">项目 ▾</a>
                 <ul class="dropdown-menu">
                     <li>
-                        <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-en>Crime in California</a>
-                        <a href="https://robm-data.github.io/california-crime-analysis/index.html" data-zh style="display:none;">加利福尼亚州犯罪</a>
+                        <a href="https://robm-data.github.io/crime-in-california/main.html" data-en>Crime in California</a>
+                        <a href="https://robm-data.github.io/crime-in-california/main.html" data-zh style="display:none;">加利福尼亚州犯罪</a>
                     </li>
                     <li>
                         <a href="#" data-en>Restaurant Recommender</a>
@@ -144,8 +144,8 @@
                 </ul>
             </li>
             <li>
-                <a href="#" data-en>Contact</a>
-                <a href="#" data-zh style="display:none;">联系</a>
+                <a href="https://robm-data.github.io/portfolio/contact.html" data-en>Contact</a>
+                <a href="https://robm-data.github.io/portfolio/contact.html" data-zh style="display:none;">联系</a>
             </li>
         </ul>
     </div>
@@ -187,8 +187,8 @@
     </section>
     
     <section class="max-w-4xl mx-auto p-6 text-center">
-        <a href="https://robm-data.github.io/portfolio/#" class="text-blue-600 hover:underline" data-en>Back to Portfolio</a>
-        <a href="https://robm-data.github.io/portfolio/#" class="text-blue-600 hover:underline" data-zh style="display:none;">返回作品集</a>
+        <a href="https://robm-data.github.io/portfolio/index.html" class="text-blue-600 hover:underline" data-en>Back to Portfolio</a>
+        <a href="https://robm-data.github.io/portfolio/index.html" class="text-blue-600 hover:underline" data-zh style="display:none;">返回作品集</a>
     </section>
 
     <footer class="bg-blue-600 text-white text-center py-4 mt-6">
