--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     <title>Project Details</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        currentLanguage = localStorage.getItem("selectedLanguage");
+        currentLanguage = "en";
         
         function toggleLanguage(lang) {
             currentLanguage = lang; // Store the language globally
