--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 el.style.display = lang === 'zh' ? "block" : "none";
             });
         
-            console.log("Current language is now:", currentLanguage);
+            alert("Current language is now:", currentLanguage);
         }
         
         function filterProjects() {
