--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
 
-        currentLanguage = localStorage.getItem("selectedLanguage");
+        let currentLanguage = "en";
         
         function toggleLanguage(lang) {
             currentLanguage = lang; // Store the language globally
